# ignity

./: .gh-labels.yml  .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-plus-plus.yml
scripts/: project.py
src/usr/src/: install-ignity.sh
tests/: conftest.py  test_boot.py  test_envs.py  test_finalize.py  test_init.py  test_perms.py  test_preboot.py  test_services.py
tests/fixtures/envs/: Dockerfile.tpl
tests/fixtures/finalize/: Dockerfile.tpl
tests/fixtures/init/: Dockerfile.tpl
tests/fixtures/perms/: Dockerfile.tpl
tests/fixtures/services/: Dockerfile.tpl
